Fixed pagination alignment

--- a/app/src/Components/DisplayCards/DisplayCards.css
+++ b/app/src/Components/DisplayCards/DisplayCards.css
@@ -10,6 +10,7 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
+  align-items:center;
   padding: 1rem;
 }
 
@@ -26,6 +27,7 @@
   list-style: none;
   margin-right: 8rem;
   padding: 0;
+  margin-bottom: 0;
 }
 
 /* Makes the pagination buttons responsive they 
@@ -46,13 +48,14 @@
   text-decoration: none;
   background-color: #ED1B24;
   margin: .2rem;
-  padding: 0.5rem 0.75rem;
+  padding: 0.5rem 0.75rem 0.6rem 0.75rem;
   border-radius: 0.4rem;
 }
 
 .pagination-btn a:hover {
   color: white;
   font-weight: 800;
+  font-size: large;
 }
 
 .page-num-btn, .break-btn {
